--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Youtube</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="projeto-2-youtube-assets/youtube-assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./projeto-2-youtube-assets/youtube-assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
